After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724257 - window: fix invalid read in computing the input shape
window: fix invalid read in computing the input shape
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-13 00:24 UTC by Giovanni Campagna
Modified: 2014-02-13 12:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: fix invalid read in computing the input shape (1.14 KB, patch)
2014-02-13 00:24 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2014-02-13 00:24:32 UTC
If we are reported only one rectangle in the input shape, we should
not try to read more.
Comment 1 Giovanni Campagna 2014-02-13 00:24:34 UTC
Created attachment 268966 [details] [review]
window: fix invalid read in computing the input shape
Comment 2 Jasper St. Pierre (not reading bugmail) 2014-02-13 00:39:17 UTC
Review of attachment 268966 [details] [review]:

Yikes, how did we miss this?
Comment 3 Giovanni Campagna 2014-02-13 12:10:32 UTC
Attachment 268966 [details] pushed as e053f7f - window: fix invalid read in computing the input shape